<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.LoginActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skipLoginBtn"
        android:text="@string/skip"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_10sdp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signincont"
        android:layout_marginTop="@dimen/_90sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="@dimen/_35sdp"
        android:paddingEnd="@dimen/_35sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/appname"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="65sp"
            android:textStyle="bold"
            android:fontFamily="@font/galada" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:id="@+id/login_email"
            android:layout_margin="@dimen/_7sdp"
            android:hint="@string/e_mail"
            android:textColor="#fff"
            android:fontFamily="@font/quicksand_semibold"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_background"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email"
            android:id="@+id/login_password"
            android:layout_margin="@dimen/_7sdp"
            android:hint="@string/password"
            android:textColor="#fff"
            android:inputType="textPassword"
            android:fontFamily="@font/quicksand_semibold"
            android:background="@drawable/edit_text_background"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/loginBtn"
            android:layout_below="@id/login_password"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_alignEnd="@id/login_password"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="@font/quicksand_bold"
            android:background="@drawable/button_bg_login"
            android:text="@string/log_in" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/divider"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/signincont">

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_1sdp"
            android:background="#CBFFFFFF"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@id/ortxt"
            app:layout_constraintHorizontal_bias="0.00"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_centerVertical="true"
            android:id="@+id/line1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ortxt"
            android:text="@string/or"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/_10sdp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_1sdp"
            android:background="#CDFFFFFF"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/ortxt"
            app:layout_constraintHorizontal_bias="0.00"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/line2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:paddingTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <com.google.android.gms.common.SignInButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:id="@+id/signInWithGoogleBtn"
            android:fontFamily="@font/quicksand_font"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:id="@+id/signupbtn"
            android:fontFamily="@font/quicksand_bold"
            app:layout_constraintTop_toBottomOf="@id/signInWithGoogleBtn"
            android:background="@drawable/button_bg_login"
            android:text="@string/sign_up"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       android:orientation="vertical"
       android:gravity="center"
       android:layout_marginBottom="@dimen/_15sdp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/quicksand_semibold"
           android:text="@string/by_continuing_to_use_our_app_you_agree_to_our"
           android:textColor="#fff"/>

       <TextView
           android:layout_width="wrap_content"
           android:fontFamily="@font/quicksand_bold"
           android:layout_height="wrap_content"
           android:text="@string/terms_and_conditions"
           android:textColor="@color/colorAccent"
           android:textStyle="bold"/>
   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>